--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-toggle-group": "^1.0.4",
@@ -19,11 +20,18 @@
     "@remix-run/react": "^2.8.0",
     "@remix-run/serve": "^2.8.0",
     "@vert-capital/design-system-ui": "^1.0.3",
+    "domain-functions": "^2.6.0",
+    "install": "^0.13.0",
     "isbot": "^4.1.0",
     "json-server": "1.0.0-alpha.23",
+    "npm": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tiny-invariant": "^1.3.3"
+    "react-hook-form": "^7.51.0",
+    "remix-auth": "^3.6.0",
+    "remix-forms": "^2.3.0",
+    "tiny-invariant": "^1.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.0",
